# fairino_pick_and_place

./: .gitmodules  build.sh  launch.sh  消息格式.md
src/fairino_cabinet/: CMakeLists.txt  package.xml
src/fairino_cabinet/config/: cabinet_param.yaml
src/fairino_cabinet/launch/: cabinet_points.launch.py
src/fairino_cabinet/src/: cabinet_points.cpp
src/fairino_camera/item_recognition/: CMakeLists.txt  package.xml
src/fairino_camera/item_recognition/config/collision_object_manage/: collision_object_size.yaml
src/fairino_camera/item_recognition/launch/: collision_object_manage.launch.py  point_cloud_extractor_qr.launch.py  wechat_qr_detection.launch.py
src/fairino_camera/item_recognition/src/: collision_object_manage.cpp  point_cloud_extractor_qr.cpp  wechat_qr_detection.cpp
src/fairino_camera/item_recognition/test/: test.py
src/fairino_camera/machinery_camera_drive/machinery_usb_cam/: CMakeLists.txt  package.xml
src/fairino_camera/machinery_camera_drive/machinery_usb_cam/config/: camera_config.yaml  camera_info.yaml
src/fairino_camera/machinery_camera_drive/machinery_usb_cam/launch/: machinery_usb_cam.launch.py  rectify_node.launch.py
src/fairino_camera/machinery_camera_drive/machinery_usb_cam/src/: rectify_node.cpp
src/fairino_camera/machinery_camera_tf/: CMakeLists.txt  package.xml
src/fairino_camera/machinery_camera_tf/config/: eye_in_hand_calibrate.calib
src/fairino_camera/machinery_camera_tf/launch/: machinery_camera_tf.launch.py
src/fairino_camera/machinery_camera_tf/src/: machinery_camera_tf.cpp
src/fairino_machinery/fairino_description/: CMakeLists.txt  fairino5_v6_robot.ros2_control.xacro
src/fairino_machinery/fairino_description/launch/: display.launch.py
src/fairino_machinery/fairino_description/meshes/fairino5_v6/: gripper_link1_left.STL  gripper_link2_right.STL
src/fairino_machinery/fairino_description/rviz/: display.rviz
src/fairino_machinery/fairino_description/urdf/: fairino5_v6.urdf
src/fairino_machinery/fairino_hardware/include/fairino_hardware/: version_control.h
src/fairino_machinery/fairino_hardware/src/: fairino_hardware_interface.cpp
src/fairino_machinery/fairino_moveit2_control/: CMakeLists.txt  package.xml
src/fairino_machinery/fairino_moveit2_control/launch/: fairino_moveit2_control.launch.py
src/fairino_machinery/fairino_moveit2_control/src/: fairino_moveit2_control.cpp
src/fairino_machinery/fairino_moveit2_control/test/: index.html  json_test  json_test.cpp
src/fairino_machinery/fairino_mtc_demo/launch/: mtc_demo_env.launch.py
src/fairino_machinery/fairino_robot/fairino5_v6_moveit2_config/: .setup_assistant
src/fairino_machinery/fairino_robot/fairino5_v6_moveit2_config/config/: fairino5_v6_robot.ros2_control.xacro  fairino5_v6_robot.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/fairino_msg/: CMakeLists.txt  package.xml
src/fairino_msg/msg/: CollisionObjectManage.msg  QrMsg.msg
src/fairino_msg/srv/: ItemMsg.srv
src/fairino_network_connect/: CMakeLists.txt  package.xml
src/fairino_network_connect/src/: fairino_network_connect.cpp
src/test/fairino_moveit2_test/fr5_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
src/test/fairino_moveit2_test/fr5_moveit2/config/: fr5_v6_robot.ros2_control.xacro  fr5_v6_robot.srdf  fr5_v6_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/test/fairino_moveit2_test/fr5_moveit2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/test/fairino_moveit2_test/fr5_v6_robot/: CMakeLists.txt  package.xml
src/test/fairino_moveit2_test/fr5_v6_robot/config/: rviz.rviz
src/test/fairino_moveit2_test/fr5_v6_robot/launch/: display.launch.py
src/test/fairino_moveit2_test/fr5_v6_robot/meshes/: base_link.STL  forearm_link.STL  gripper_link1_right.STL  gripper_link2_left.STL  gripper_link3_left.STL  gripper_link3_right.STL  shoulder_link.STL  upperarm_link.STL  wrist1_link.STL  wrist2_link.STL  wrist3_link.STL
src/test/fairino_moveit2_test/fr5_v6_robot/urdf/: fr5_v6_robot.urdf
src/test/test_/: CMakeLists.txt  package.xml
src/test/test_/include/test_/: compute_grasp_stage.hpp
src/test/test_/launch/: aaa.launch.py  fairino_moveit2_control.launch.py
src/test/test_/src/: aaa.cpp  test_faiirino_mtc_control.cpp  test_tf.cpp
